Script Component 추가

--- a/Engine_Source/Engine_Source.vcxitems.filters
+++ b/Engine_Source/Engine_Source.vcxitems.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)yaPlayScene.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)yaCameraScript.cpp">
+      <Filter>GameObject\Component\Script</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)yaEntity.h">
@@ -199,6 +202,9 @@
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)yaPlayScene.h">
       <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)yaCameraScript.h">
+      <Filter>GameObject\Component\Script</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
