카메라 원상복구

--- a/Engine_Source/Engine_Source.vcxitems.filters
+++ b/Engine_Source/Engine_Source.vcxitems.filters
@@ -127,6 +127,7 @@
       <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)yaPlayer.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)yaDog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)yaEntity.h">
@@ -186,9 +187,6 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)yaScript.h">
       <Filter>GameObject\Component\Script</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)yaSceneManager.h">
-      <Filter>Scene\Manager</Filter>
-    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)yaLayer.h">
       <Filter>Scene\Layer</Filter>
     </ClInclude>
@@ -220,6 +218,10 @@
       <Filter>Scene</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)yaPlayer.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)yaDog.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)yaSceneManager.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)yaMath.inl">
