--- a/MohEngine/MohEngine.vcxproj
+++ b/MohEngine/MohEngine.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="yaPlayScene.h" />
     <ClInclude Include="yaTitleScene.h" />
     <ClInclude Include="CreateMaterial.h" />
+    <ClInclude Include="yaUI.h" />
     <ClInclude Include="yaUICamera.h" />
   </ItemGroup>
   <ItemGroup>
@@ -170,6 +171,7 @@
     <ClCompile Include="yaPlayerScript.cpp" />
     <ClCompile Include="yaPlayScene.cpp" />
     <ClCompile Include="yaTitleScene.cpp" />
+    <ClCompile Include="yaUI.cpp" />
     <ClCompile Include="yaUICamera.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
