--- a/MohEngine/MohEngine.vcxproj
+++ b/MohEngine/MohEngine.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="yaPlayScene.h" />
     <ClInclude Include="yaTitleScene.h" />
     <ClInclude Include="CreateMaterial.h" />
+    <ClInclude Include="yaToolScene.h" />
     <ClInclude Include="yaUI.h" />
     <ClInclude Include="yaUICamera.h" />
   </ItemGroup>
@@ -173,6 +174,7 @@
     <ClCompile Include="yaPlayerScript.cpp" />
     <ClCompile Include="yaPlayScene.cpp" />
     <ClCompile Include="yaTitleScene.cpp" />
+    <ClCompile Include="yaToolScene.cpp" />
     <ClCompile Include="yaUI.cpp" />
     <ClCompile Include="yaUICamera.cpp" />
   </ItemGroup>
